updated event listener

--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Overwatch-O-Gram</title>
 
-    <link rel="stylesheet" href="styles.css" >
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Welcome to Overwatch-O-Gram!</h1>
     <div id="voice-lines-container"></div>
 
-    <div class="form-container">
-        <form id="voice-line-form">
-            <label for="voice-line-text">Make your own voice line here:</label>
-            <input type="text" id="voice-line-text" name="voice-line" placeholder="voice line..." required ></input>
-            <input type="button" value="Submit">
-        </form>
-    </div>
+    <form id="voice-line-form">
+        <label for="voice-line-text">Make your own voice line here:</label>
+        <input type="text" id="voice-line-text" name="voice-line" placeholder="voice line..." required ></input>
+        <button type="submit">Submit</button>
+    </form>
 
     <script src="index.js"></script>
 </body>
