--- a/ashe.html
+++ b/ashe.html
@@ -5,24 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ashe</title>
 
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!--Navbar-->
-    <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/home.html"><strong>Overwatch-O-Gram</strong></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="/ashe.html">Ashe</a>
-                    <a class="nav-link" href="/cassidy.html">Cassidy</a>
-                    <a class="nav-link" href="/dva.html">D.Va</a>
-                </div>
-            </div>
-        </div>
-    </nav>
+    <!--Header-->
+    <header>
+        <a href="/home.html" id="navbar-brand">Overwatch-O-Gram</a>
+        <nav class="navbar">
+            <ul>
+                <li><a href="/ashe.html">Ashe</a></li>
+                <li><a href="/dva.html">D.Va</a></li>
+                <li><a href="/lifeweaver.html">Lifeweaver</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <h1>Ashe's Page</h1>
     <div id="voice-lines-container"></div>
