changed orientation of title

--- a/home.html
+++ b/home.html
@@ -20,8 +20,8 @@
         </nav>
     </header>
 
-    <h1>Choose a Hero:</h1>
     <div class="home">
+        <h1 style="text-align: center; color: white;">CHOOSE A HERO</h1>
         <div class="hero-choice" id="ashe-hero-choice" style="background-image: url(/images/ashe-hero.jpg);">
             <button type="submit" class="hero-button">
                 <a class="nav-link" href="/ashe.html">Ashe</a>
