added event listener to hero choice options

--- a/home.html
+++ b/home.html
@@ -20,19 +20,21 @@
         </nav>
     </header>
 
+    <!--Home-->
     <div class="home">
-        <h1 style="text-align: center; color: white;">CHOOSE A HERO</h1>
-        <div class="hero-choice" id="ashe-hero-choice" style="background-image: url(/images/ashe-hero.jpg);">
-            <button type="submit" class="hero-button">
+        <h1 id="choose-hero-text">CHOOSE A HERO</h1>
+        <div class="hero-choice" id="ashe" style="background-image: url(/images/ashe-hero.jpg);">
+            <!-- <button type="submit" class="hero-button">
                 <a class="nav-link" href="/ashe.html">Ashe</a>
-            </button>
+            </button> -->
+            <h1 class="hero-title">Ashe</h1>
         </div>
-        <div class="hero-choice" id="dva-hero-choice" style="background-image: url(/images/dva-hero.jpg);">
+        <div class="hero-choice" id="dva" style="background-image: url(/images/dva-hero.jpg);">
             <button type="submit" class="hero-button">
                 <a class="nav-link" href="/dva.html">D.Va</a>
             </button>
         </div>
-        <div class="hero-choice" id="lifeweaver-hero-choice" style="background-image: url(/images/lifeweaver-hero.jpg);">
+        <div class="hero-choice" id="lifeweaver" style="background-image: url(/images/lifeweaver-hero.jpg);">
             <button type="submit" class="hero-button">
                 <a class="nav-link" href="/lifeweaver.html">Lifeweaver</a>
             </button>
