--- a/lifeweaver.html
+++ b/lifeweaver.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=\, initial-scale=1.0">
-    <title>Cassidy</title>
+    <title>Lifeweaver</title>
     
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -20,7 +20,7 @@
         </nav>
     </header>
 
-    <h1>Cassidy's Page</h1>
+    <h1>Lifeweaver's Page</h1>
     <div id="voice-lines-container"></div>
     <form id="voice-line-form">
         <label for="voice-line-text">Make your own voice line here:</label>
