--- a/home.html
+++ b/home.html
@@ -24,20 +24,13 @@
     <div class="home">
         <h1 id="choose-hero-text">CHOOSE A HERO</h1>
         <div class="hero-choice" id="ashe" style="background-image: url(/images/ashe-hero.jpg);">
-            <!-- <button type="submit" class="hero-button">
-                <a class="nav-link" href="/ashe.html">Ashe</a>
-            </button> -->
             <h1 class="hero-title">Ashe</h1>
         </div>
         <div class="hero-choice" id="dva" style="background-image: url(/images/dva-hero.jpg);">
-            <button type="submit" class="hero-button">
-                <a class="nav-link" href="/dva.html">D.Va</a>
-            </button>
+            <h1 class="hero-title">D.Va</h1>
         </div>
         <div class="hero-choice" id="lifeweaver" style="background-image: url(/images/lifeweaver-hero.jpg);">
-            <button type="submit" class="hero-button">
-                <a class="nav-link" href="/lifeweaver.html">Lifeweaver</a>
-            </button>
+            <h1 class="hero-title">Lifeweaver</h1>
         </div>
     </div>
 
