--- a/lifeweaver.html
+++ b/lifeweaver.html
@@ -28,6 +28,6 @@
         <button type="submit">Submit</button>
     </form>
 
-    <script src="index.js" type="module"></script>
+    <script src="heropage.js" type="module"></script>
 </body>
 </html>
