load each heros voice lines to page

--- a/dva.html
+++ b/dva.html
@@ -20,13 +20,15 @@
         </nav>
     </header>
     
-    <h1>D.Va's Page</h1>
-    <div id="voice-lines-container"></div>
-    <form id="voice-line-form">
-        <label for="voice-line-text">Make your own voice line here:</label>
-        <input type="text" id="voice-line-text" name="voice-line" placeholder="voice line..." required ></input>
-        <button type="submit">Submit</button>
-    </form>
+    <div id="dvaVoiceLines">
+        <h1>D.Va's Page</h1>
+        <ul class="voice-lines-container"></ul>
+        <form id="voice-line-form">
+            <label for="voice-line-text">Make your own voice line here:</label>
+            <input type="text" id="voice-line-text" name="voice-line" placeholder="voice line..." required ></input>
+            <button type="submit">Submit</button>
+        </form>
+    </div>
 
     <script src="heropage.js" type="module"></script>
 </body>
