added styling to components

--- a/ashe.html
+++ b/ashe.html
@@ -20,14 +20,14 @@
         </nav>
     </header>
 
-    <div id="asheVoiceLines">
-        <h1>Ashe's Page</h1>
-        <ul class="voice-lines-container"></ul>
+    <div id="asheVoiceLines" style="background-image: url('/images/ashe-hero.jpg'); background-position: 45% 100%;">
+        <h1>Ashe</h1>
         <form id="voice-line-form">
             <label for="voice-line-text">Make your own voice line here:</label>
             <input type="text" id="voice-line-text" name="voice-line" placeholder="voice line..." required ></input>
             <button type="submit">Submit</button>
         </form>
+        <ul class="voice-lines-container"></ul>
     </div>
 
     <script src="heropage.js" type="module"></script>
