--- a/dva.html
+++ b/dva.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
     
-    <div id="dvaVoiceLines">
+    <div id="dvaVoiceLines" style="background-image: url('/images/dva-hero.jpg'); background-position: 35% 40%;">
         <h1>D.Va's Page</h1>
         <ul class="voice-lines-container"></ul>
         <form id="voice-line-form">
