--- a/lifeweaver.html
+++ b/lifeweaver.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
 
-    <div id="lifeweaverVoiceLines">
+    <div id="lifeweaverVoiceLines" style="background-image: url('/images/lifeweaver-hero.jpg'); background-position: 50% 30%;">
         <h1>Lifeweaver's Page</h1>
         <ul class="voice-lines-container"></ul>
         <form id="voice-line-form">
